--- a/juego.html
+++ b/juego.html
@@ -8,12 +8,18 @@
     
 </head>
 <body ng-controller="ControladorJuegoBingo">
-    <button class="boton" ng-click="iniciarJuego">
+    <button class="boton" ng-click="iniciarJuego()">
         Iniciar Juego
     </button>
-    <button class="boton">
+    <button class="boton" ng-click="sacarBalota()">
         Sacar Balota
     </button>
+
+    <div class="ultimaBalota">
+        Última balota <span class="numeroBalota">
+            {{ cantor.ultimaBalota }}
+        </span>
+    </div>
 
     <div class="cantor">
         <table class="tablaCantor">
@@ -29,7 +35,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="fila in cantor.tabla">
-                    <td ng-repeat="numero in fila">
+                    <td ng-repeat="numero in fila" ng-class="{ sacada: cantor.balotasSacadas[numero-1] }">
                         {{ numero }}
                     </td>
                 </tr>
