Modifique cierta logica del juego y estilos

--- a/juego.html
+++ b/juego.html
@@ -17,7 +17,7 @@
 
     <div class="ultimaBalota">
         Última balota <span class="numeroBalota">
-            {{ cantor.ultimaBalota }}
+            {{ cantor.ultimaBalota || "Ninguno"}}
         </span>
     </div>
 
